changed readFile in File servise