@@ -2,18 +2,25 @@ package com.maks.durov.amazonreviewapp.service;
 
 import com.maks.durov.amazonreviewapp.exception.DataProcessingException;
 import java.io.IOException;
+import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
+import java.util.Objects;
+import java.nio.file.Paths;
 import org.springframework.stereotype.Component;
+import org.thymeleaf.util.ClassLoaderUtils;
 
 @Component
 public class FileService {
     public List<String> readFile(String path) {
         try {
-            return Files.readAllLines(Path.of(path));
+            return Files.readAllLines(Paths.get(Objects.requireNonNull(getClass()
+                    .getClassLoader().getResource(path)).toURI()));
         } catch (IOException e) {
             throw new DataProcessingException("can't read file " + path, e);
+        } catch (URISyntaxException e) {
+            throw new DataProcessingException("wrong uri", e);
         }
     }
 }
